Closed Bug 374720 Opened 17 years ago Closed 17 years ago

Minor gfx changes to support new textframe work

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(1 file, 3 obsolete files)

Attached patch changes (obsolete) — Splinter Review
-- Removing TextProvider as a superclass of PropertyProvider. It's no longer needed by nsTextFrameThebes

-- Make SetPotentialLineBreaks virtual so gfxTextRun subclasses can override it (text-transform:titlecase makes a special gfxTextRun subclass that changes its glyphs when potential line breaks change, because that means the start-of-word has changed).

-- Make SetLineBreaks virtual for similar reasons. Also make it return a boolean to say whether it changed anything or not.

-- Add ResetGlyphRuns and GetGlyphRuns so that other code can extract and update the glyph runs in a textrun.

-- Make SetDetailedGlyphs' aGlyphs parameter point to const

-- fix a bug in gfxPangoFont::Measure that indexes the spacing array incorrectly
Attachment #259173 - Flags: review?(pavlov)
Attached patch update (obsolete) — Splinter Review
All of the above, plus implement gfx(Atsui,Windows)FontGroup::Copy() (needed for smallcaps when we need to shrink the text size for a fontgroup).
Attachment #259314 - Flags: review?(pavlov)
Attached patch oops, sorrySplinter Review
One more fix: comment out the assertion about glyph extents not being supported. It fires like crazy with the new textframe.
Attachment #259173 - Attachment is obsolete: true
Attachment #259314 - Attachment is obsolete: true
Attachment #259315 - Flags: review?(pavlov)
Attachment #259173 - Flags: review?(pavlov)
Attachment #259314 - Flags: review?(pavlov)
Attachment #259315 - Flags: review?(pavlov) → review+
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attached file Handle self-connection (obsolete) —
Thanks to some fuzzer-generated crashtest.
Attachment #805317 - Flags: review?(ehsan)
Assignee: roc → paul
Attachment #805317 - Attachment is obsolete: true
Attachment #805317 - Attachment is patch: false
Attachment #805317 - Flags: review?(ehsan)
I'm not really sure what happened here, bzexport did something funny. Sorry for the noise.
Assignee: paul → roc
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: