Bug 374720. Minor gfx changes to support new textframe work. r=pavlov