gfx/thebes/public/gfxWindowsFonts.h
@@ -426,10 +426,8 @@ public:
     gfxWindowsFontGroup(const nsAString& aFamilies, const gfxFontStyle* aStyle);
     virtual ~gfxWindowsFontGroup();
 
-    virtual gfxFontGroup *Copy(const gfxFontStyle *aStyle) {
-        NS_ERROR("NOT IMPLEMENTED");
-        return nsnull;
-    }
+    virtual gfxFontGroup *Copy(const gfxFontStyle *aStyle);
+
     virtual gfxTextRun *MakeTextRun(const PRUnichar* aString, PRUint32 aLength,
                                     Parameters* aParams);
     virtual gfxTextRun *MakeTextRun(const PRUint8* aString, PRUint32 aLength,
