gfx/thebes/src/gfxFont.cpp
@@ -162,8 +162,9 @@ gfxFont::Measure(gfxTextRun *aTextRun,
                  Spacing *aSpacing)
 {
     // XXX temporary code, does not handle glyphs outside the font-box
-    NS_ASSERTION(!(aTextRun->GetFlags() & gfxTextRunFactory::TEXT_NEED_BOUNDING_BOX),
-                 "Glyph extents not yet supported");
+    // XXX comment out the assertion for now since it fires too much
+    // NS_ASSERTION(!(aTextRun->GetFlags() & gfxTextRunFactory::TEXT_NEED_BOUNDING_BOX),
+    //              "Glyph extents not yet supported");
     PRInt32 advance = 0;
     PRUint32 i;
     const gfxTextRun::CompressedGlyph *charGlyphs = aTextRun->GetCharacterGlyphs();
@@ -1244,11 +1245,10 @@ gfxTextRun::GetAdvanceWidth(PRUint32 aStart, PRUint32 aLength,
     return result;
 }
 
-
-void
+PRBool
 gfxTextRun::SetLineBreaks(PRUint32 aStart, PRUint32 aLength,
                           PRBool aLineBreakBefore, PRBool aLineBreakAfter,
-                          TextProvider *aProvider,
+                          PropertyProvider *aProvider,
                           gfxFloat *aAdvanceWidthDelta)
 {
     // Do nothing because our shaping does not currently take linebreaks into
@@ -1256,6 +1256,7 @@ gfxTextRun::SetLineBreaks(PRUint32 aStart, PRUint32 aLength,
     if (aAdvanceWidthDelta) {
         *aAdvanceWidthDelta = 0;
     }
+    return PR_FALSE;
 }
 
 PRUint32
@@ -1307,7 +1308,7 @@ gfxTextRun::CountMissingGlyphs()
 }
 
 void
-gfxTextRun::SetDetailedGlyphs(PRUint32 aIndex, DetailedGlyph *aGlyphs,
+gfxTextRun::SetDetailedGlyphs(PRUint32 aIndex, const DetailedGlyph *aGlyphs,
                               PRUint32 aCount)
 {
     NS_ASSERTION(aCount > 0, "Can't set zero detailed glyphs");
